Issue #19227 / Issue #18747: Remove pthread_atfork() handler to remove OpenSSL re-seeding It is causing trouble like e.g. hanging processes.